src/test/ui/underscore-lifetime/where-clause-inherent-impl-underscore.rust2018.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/where-clause-inherent-impl-underscore.rs:13:19
   |
LL |     T: WithRegion<'_>
   |                   ^^ `'_` is a reserved lifetime name

error: aborting due to previous error

